taking out margin to avoid the gap on the right

--- a/css/style.css
+++ b/css/style.css
@@ -271,7 +271,6 @@ label.logo{
 ul{
   list-style: none;
   float: right;
-  margin-right: 75px;
 }
 ul li{
   display: inline-block;
